[project]
name = "uipath-coded-process"
version = "0.1.0"
description = "Exploring UiPath SDK"
authors = [
    {name = "sindhujamallappa",email = "72853544+sindhujamallappa@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
